2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.1: Remove out-dated options from the man page

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod: Update man pages

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add version number to the libgdata check error

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_realize), (bacon_video_widget_init):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize): Remainders of the patches below to
	use GtkWidget accessors in BaconVideoWidget, which changes how Bvw's
	GdkWindows are created. (Closes: #578591)

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_show), (bacon_video_widget_hide),
	(bacon_video_widget_expose_event),
	(bacon_video_widget_size_allocate), (bacon_video_widget_init),
	(bvw_handle_application_message), (bvw_handle_element_message),
	(bacon_video_widget_set_show_cursor):
	* src/backend/bacon-video-widget-xine.c (load_video_out_driver),
	(xine_event), (bacon_video_widget_unrealize),
	(bacon_video_widget_expose), (bacon_video_widget_show),
	(bacon_video_widget_hide), (bacon_video_widget_size_allocate),
	(bacon_video_widget_set_show_cursor),
	(bacon_video_widget_set_scale_ratio): Patches from Víctor Manuel
	Jáquez Leal <vjaquez@igalia.com> to use proper GtkWidget accessors
	in BaconVideoWidget. (Helps: #578591)

2009-04-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c (resize_video_window),
	(bacon_video_widget_init), (bacon_video_widget_set_zoom),
	(bacon_video_widget_get_zoom):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_set_zoom),
	(bacon_video_widget_get_zoom):
	* src/backend/bacon-video-widget.h:
	* src/totem-object.c (totem_action_zoom),