@@ -35,7 +35,7 @@ AC_PATH_PROG([GLIB_MKENUMS],[glib-mkenums])
 # Requirements
 GLIB_REQS=2.13.4
 GTK_REQS=2.16.0
-TOTEM_PLPARSER_REQS=2.23.91
+TOTEM_PLPARSER_REQS=2.27.0
 GNOMEICON_REQS=2.15.90
 DBUS_REQS=0.61
 VALA_REQS=0.1.6
