@@ -1,3 +1,10 @@
+2009-04-22  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totem-plugin-viewer.c (totem_embedded_set_uri):
+	* configure.in: Use the new URI resolution code in totem-pl-parser
+	and fix crasher when opening a video at the root of a webserver
+	(Closes: #579716)
+
 2009-04-21  Bastien Nocera  <hadess@hadess.net>
 
 	* data/totem.1: Remove out-dated options from the man page
